- meterMsg (h & cpp) added. - data typ of serial.dataBuffer changed - return type of serial::getData changed - unneccessary includes removed from main - meterMsg declarations added - serial dataBuffer changed to std::string

--- a/Blink1/Blink1.vcxproj.filters
+++ b/Blink1/Blink1.vcxproj.filters
@@ -3,8 +3,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="serial.cpp" />
+    <ClCompile Include="mqttWrapper.cpp" />
+    <ClCompile Include="meterMsg.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="serial.h" />
+    <ClInclude Include="mqttWrapper.h" />
+    <ClInclude Include="meterMsg.h" />
   </ItemGroup>
 </Project>
