--- a/Blink1/Blink1.vcxproj
+++ b/Blink1/Blink1.vcxproj
@@ -69,10 +69,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="meterMsg.cpp" />
     <ClCompile Include="mqttWrapper.cpp" />
     <ClCompile Include="serial.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="meterMsg.h" />
     <ClInclude Include="mqttWrapper.h" />
     <ClInclude Include="serial.h" />
   </ItemGroup>
