+ main.cpp:  - clean up - std::string newLine removed - reaction to endOfMessage modified
+ meterMsgHandler
- added

+ meterMsg
- actual required elements added

--- a/Blink1/Blink1.vcxproj.filters
+++ b/Blink1/Blink1.vcxproj.filters
@@ -5,10 +5,12 @@
     <ClCompile Include="serial.cpp" />
     <ClCompile Include="mqttWrapper.cpp" />
     <ClCompile Include="meterMsg.cpp" />
+    <ClCompile Include="meterMsgHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="serial.h" />
     <ClInclude Include="mqttWrapper.h" />
     <ClInclude Include="meterMsg.h" />
+    <ClInclude Include="meterMsgHandler.h" />
   </ItemGroup>
 </Project>
