--- a/Blink1/Blink1.vcxproj
+++ b/Blink1/Blink1.vcxproj
@@ -70,11 +70,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="meterMsg.cpp" />
+    <ClCompile Include="meterMsgHandler.cpp" />
     <ClCompile Include="mqttWrapper.cpp" />
     <ClCompile Include="serial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="meterMsg.h" />
+    <ClInclude Include="meterMsgHandler.h" />
     <ClInclude Include="mqttWrapper.h" />
     <ClInclude Include="serial.h" />
   </ItemGroup>
