--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: cpp
 compiler: gcc
 
 script: 
- - g++ main.cpp -o travis_gcc_cpp
+ - g++ Blink1/main.cpp -o travis_gcc_cpp
 - ./travis_gcc_cpp98
