--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+dist: trusty
+sudo: false
 language: cpp
-compiler: gcc
 
 script: 
- - g++ Blink1/main.cpp -o travis_gcc_cpp
-- ./travis_gcc_cpp98
+ - cmake .
+ - cmake --build . -- -j2
