--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ language: cpp
 os: debian-latest
 env: arm
 
-script: 
+script:
+ - sudo apt-get install git git-core
+ - git clone git://git.drogon.net/wiringPi
+ - cd wiringPi
+ - ./build
  - cmake .
  - cmake --build . -- -j2
