--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os: debian-latest
 env: arm
 
 script:
-  - sudo apt-get install conan
+  - pip install conan
  #- sudo apt-get install git git-core
  #- git clone git://git.drogon.net/wiringPi
  #- cd wiringPi
