--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,11 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.7.1)
 
-add_executable(intro Blink1/main.cpp)
+ project(gitTest)
+
+ add_definitions("-std=c++14")
+
+ include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+ conan_basic_setup()
+
+ add_executable(Blink1 main.cpp)
+ target_link_libraries(Blink1 ${CONAN_LIBS})
